--- a/fsharp/Core/Core.fsproj
+++ b/fsharp/Core/Core.fsproj
@@ -3,11 +3,21 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <RootNamespace>Wallymathieu.VersioningStudies</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
     <Compile Include="Library.fs" />
+    <Compile Include="Giraffe.fs" />
+    <Compile Include="Web.fs" />
+    <PackageReference Include="FSharpPlus" Version="1.2.4" />
     <PackageReference Include="Fleece.FSharpData" Version="0.10.0" />
+    <PackageReference Include="Giraffe" Version="4.1.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="6.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Hosting" Version="2.2.7" />
   </ItemGroup>
 
 </Project>
